[project]
name = "deepseek-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Rodrigues",email = "matheusrf96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
